airflow/logs/dag_id=news_data_ingestion/run_id=scheduled__2025-05-09T170000+0000/task_id=create_news_tables/attempt=1.log
[2025-05-11T02:33:38.799+0700] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-05-11T02:33:38.838+0700] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: news_data_ingestion.create_news_tables scheduled__2025-05-09T17:00:00+00:00 [queued]>
[2025-05-11T02:33:38.846+0700] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: news_data_ingestion.create_news_tables scheduled__2025-05-09T17:00:00+00:00 [queued]>
[2025-05-11T02:33:38.847+0700] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2025-05-11T02:33:38.866+0700] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): create_news_tables> on 2025-05-09 17:00:00+00:00
[2025-05-11T02:33:38.875+0700] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'news_data_ingestion', 'create_news_tables', 'scheduled__2025-05-09T17:00:00+00:00', '--job-id', '7', '--raw', '--subdir', 'DAGS_FOLDER/news_data_ingestion.py', '--cfg-path', '/tmp/tmppgdg15kv']
[2025-05-11T02:33:38.878+0700] {standard_task_runner.py:91} INFO - Job 7: Subtask create_news_tables
[2025-05-11T02:33:38.881+0700] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=1049) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2025-05-11T02:33:38.882+0700] {standard_task_runner.py:63} INFO - Started process 1058 to run task
[2025-05-11T02:33:38.953+0700] {task_command.py:426} INFO - Running <TaskInstance: news_data_ingestion.create_news_tables scheduled__2025-05-09T17:00:00+00:00 [running]> on host f94ba298fced
[2025-05-11T02:33:39.083+0700] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='news_data_ingestion' AIRFLOW_CTX_TASK_ID='create_news_tables' AIRFLOW_CTX_EXECUTION_DATE='2025-05-09T17:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2025-05-09T17:00:00+00:00'
[2025-05-11T02:33:39.085+0700] {taskinstance.py:430} INFO - ::endgroup::
[2025-05-11T02:33:39.146+0700] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-05-11T02:33:39.147+0700] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/news_data_ingestion.py", line 73, in create_news_tables_if_not_exist
    cur.execute("""
psycopg2.errors.SyntaxError: syntax error at or near "INTEGER"
LINE 6:         news_count INTEGER,
                           ^

[2025-05-11T02:33:39.170+0700] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=news_data_ingestion, task_id=create_news_tables, run_id=scheduled__2025-05-09T17:00:00+00:00, execution_date=20250509T170000, start_date=20250510T193338, end_date=20250510T193339
[2025-05-11T02:33:39.186+0700] {standard_task_runner.py:110} ERROR - Failed to execute job 7 for task create_news_tables (syntax error at or near "INTEGER"
LINE 6:         news_count INTEGER,
                           ^
; 1058)
[2025-05-11T02:33:39.218+0700] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2025-05-11T02:33:39.251+0700] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-05-11T02:33:39.258+0700] {local_task_job_runner.py:222} INFO - ::endgroup::
[2025-05-11T16:24:01.638+0700] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-05-11T16:24:01.756+0700] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: news_data_ingestion.create_news_tables scheduled__2025-05-09T17:00:00+00:00 [queued]>
[2025-05-11T16:24:01.779+0700] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: news_data_ingestion.create_news_tables scheduled__2025-05-09T17:00:00+00:00 [queued]>
[2025-05-11T16:24:01.780+0700] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2025-05-11T16:24:01.823+0700] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): create_news_tables> on 2025-05-09 17:00:00+00:00
[2025-05-11T16:24:01.838+0700] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'news_data_ingestion', 'create_news_tables', 'scheduled__2025-05-09T17:00:00+00:00', '--job-id', '5', '--raw', '--subdir', 'DAGS_FOLDER/news_data_ingestion.py', '--cfg-path', '/tmp/tmpjl1sw3fc']
[2025-05-11T16:24:01.861+0700] {standard_task_runner.py:91} INFO - Job 5: Subtask create_news_tables
[2025-05-11T16:24:01.860+0700] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=264) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2025-05-11T16:24:01.882+0700] {standard_task_runner.py:63} INFO - Started process 273 to run task
[2025-05-11T16:24:02.021+0700] {task_command.py:426} INFO - Running <TaskInstance: news_data_ingestion.create_news_tables scheduled__2025-05-09T17:00:00+00:00 [running]> on host 615e6c656dab
[2025-05-11T16:24:02.261+0700] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='news_data_ingestion' AIRFLOW_CTX_TASK_ID='create_news_tables' AIRFLOW_CTX_EXECUTION_DATE='2025-05-09T17:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2025-05-09T17:00:00+00:00'
[2025-05-11T16:24:02.264+0700] {taskinstance.py:430} INFO - ::endgroup::
[2025-05-11T16:24:02.428+0700] {logging_mixin.py:188} INFO - ✅ Tabel news telah dibuat atau sudah ada sebelumnya
[2025-05-11T16:24:02.429+0700] {python.py:237} INFO - Done. Returned value was: None
[2025-05-11T16:24:02.432+0700] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-05-11T16:24:02.471+0700] {taskinstance.py:1206} INFO - Marking task as SUCCESS. dag_id=news_data_ingestion, task_id=create_news_tables, run_id=scheduled__2025-05-09T17:00:00+00:00, execution_date=20250509T170000, start_date=20250511T092401, end_date=20250511T092402
[2025-05-11T16:24:02.544+0700] {local_task_job_runner.py:240} INFO - Task exited with return code 0
[2025-05-11T16:24:02.641+0700] {taskinstance.py:3503} INFO - 1 downstream tasks scheduled from follow-on schedule check
[2025-05-11T16:24:02.650+0700] {local_task_job_runner.py:222} INFO - ::endgroup::
